# LabProgrammazione

./: CMakeLists.txt  Chat.cpp  Chat.h  ChatRegister.cpp  ChatRegister.h  Message.cpp  Message.h  README.md  Temporary.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  ChatRegisterTest.cpp  ChatTest.cpp  MessageTest.cpp  UserTest.cpp
